--- a/easystar/src/main/webapp/static/reg-login/css/style.css
+++ b/easystar/src/main/webapp/static/reg-login/css/style.css
@@ -264,3 +264,61 @@ button:active {
 
     border: 0px solid #ef4300;
 }
+
+
+.wrapper{
+	width:100%;
+	display:block;
+	min-width:320px;
+}
+.main{
+	margin:0 auto;
+}
+#wrap{
+    position:relative;
+    min-height:100%;
+    _height:100%;
+    overflow:hidden;
+}
+#pages{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-align:center;
+}
+.page{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+.page1{
+    background:red;
+}
+.page2{
+    background:yellow;
+}
+.page3{
+    background:green;
+}
+.page4{
+    background:black;
+}
+.page5{
+    background:grey;
+}
+h1{
+    text-align:center;
+    font-size:30px;
+}
+.box{
+    text-align:center;
+/*     margin:50px 0; */
+}
+.box img{
+    max-width:100%;
+}
+
