--- a/easystar/src/main/webapp/static/reg-login/css/mycenter.css
+++ b/easystar/src/main/webapp/static/reg-login/css/mycenter.css
@@ -164,7 +164,7 @@
 }
 .m-my .info{
 	width: 100%;
-	height: 200px;
+	height: 120px;
 	background-repeat:no-repeat;
 	background-image: url('../images/mycenter/beijing_top.png');
 	display: flex;
@@ -172,13 +172,14 @@
 	background-size: 100% 100%; 
 }
 .m-my .info .left{
-	width: 70px;
-	height: 70px;
+	width: 50px;
+	height: 50px;
 	background-color: white;
 	border-radius: 50%;
-	margin:0 30px;
+	margin:0 15px;
 }
 .m-my .info .right{
+	font-size: 16px;
 	color: #333;
 }
 /*--------------------------------------*/
