--- a/easystar/src/main/webapp/static/reg-login/css/style.css
+++ b/easystar/src/main/webapp/static/reg-login/css/style.css
@@ -299,3 +299,18 @@ button:active {
     height:100%;
 }
 
+.box .tiao{
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    font-size: 12px;
+    color: white;
+    text-decoration:none;
+    background-color: rgba(0,0,0,.5);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    top: 30px;
+    right: 30px;
+}
