--- a/easystar/src/main/webapp/static/reg-login/css/mycenter.css
+++ b/easystar/src/main/webapp/static/reg-login/css/mycenter.css
@@ -166,7 +166,7 @@
 	width: 100%;
 	height: 120px;
 	background-repeat:no-repeat;
-	background-image: url('../images/mycenter/beijing_top.png');
+	background-image: url('../images/mycenter/bg22.png');
 	display: flex;
 	align-items: center;
 	background-size: 100% 100%; 
