--- a/easystar/src/main/webapp/static/reg-login/css/mytaskdetails.css
+++ b/easystar/src/main/webapp/static/reg-login/css/mytaskdetails.css
@@ -356,13 +356,13 @@
 	display: block;
 	width: 32px;
 	height: 32px;
-	background-image: url('../images/mycenter/icon_you1.png');
+	background-image: url('../img/icon_you1.png');
 }
 .m-my .info{
 	width: 100%;
 	height: 200px;
 	background-repeat:no-repeat;
-	background-image: url('../images/mycenter/beijing_top.png');
+	background-image: url('../img/beijing_top.png');
 	display: flex;
 	align-items: center;
 	background-size: 100% 100%; 
@@ -645,7 +645,7 @@
 	width: 100%;
 	height: calc(100% - 180px);
 	background-repeat:no-repeat;
-	background-image: url('../images/mycenter/bj2.jpg');
+	background-image: url('../img/bj2.jpg');
 	display: flex;
 	justify-content: center;
 	background-size: 100% 100%; 
@@ -695,7 +695,7 @@
 
 }
 .m-background .img{
- 	background-image: url('../images/mycenter/bj1.jpg');
+ 	background-image: url('../img/bj1.jpg');
  	background-size: 100% 100%;  
  	height: 180px;
  	width: 100%;
